force-app/main/default/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <description>Top-level budget record for an advertiser or campaign period. Private sharing — only the owning AE and users above in the role hierarchy can view without an explicit share. Fields added by the budget-planning slice.</description>
    <label>Budget</label>
    <nameField>
        <displayFormat>BDG-{0000000}</displayFormat>
        <label>Budget Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>