force-app/main/default/objects/Budget__c/fields/Apr_Budget__c.field-meta.xml
<CustomField>
    <fullName>Apr_Budget__c</fullName>
    <label>April Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>