force-app/main/default/objects/Budget__c/fields/Aug_Budget__c.field-meta.xml
<CustomField>
    <fullName>Aug_Budget__c</fullName>
    <label>August Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>