force-app/main/default/objects/Budget__c/fields/Jul_Budget__c.field-meta.xml
<CustomField>
    <fullName>Jul_Budget__c</fullName>
    <label>July Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>