force-app/main/default/objects/Budget__c/fields/Nov_Budget__c.field-meta.xml
<CustomField>
    <fullName>Nov_Budget__c</fullName>
    <label>November Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>