force-app/main/default/objects/Budget__c/fields/Period_Year__c.field-meta.xml
<CustomField>
    <fullName>Period_Year__c</fullName>
    <label>Period Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>