force-app/main/default/objects/Budget__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>National TV</fullName><default>false</default><label>National TV</label></value>
            <value><fullName>Local TV</fullName><default>false</default><label>Local TV</label></value>
            <value><fullName>Digital</fullName><default>false</default><label>Digital</label></value>
            <value><fullName>Radio</fullName><default>false</default><label>Radio</label></value>
            <value><fullName>Streaming</fullName><default>false</default><label>Streaming</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>