force-app/main/default/objects/Budget__c/fields/Sep_Budget__c.field-meta.xml
<CustomField>
    <fullName>Sep_Budget__c</fullName>
    <label>September Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>